started working on options menu

--- a/Source/manifest.json
+++ b/Source/manifest.json
@@ -7,10 +7,12 @@
     "scripts": ["background.js"]
   },
   "permissions": [
-    "tabs"
+    "tabs",
+    "storage"
   ],
   "browser_action": {
     //"default_icon": "icon.png",
-    "default_title": "dubitable"
+    "default_title": "dubitable",
+    "default_popup": "popup.html"
   }
 }
