--- a/Source/manifest.json
+++ b/Source/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "dubitable",
   "description": "Provide a warning when the user visits a site that provides fake, misleading, or primarily satirical news.",
-  "version": "0.4",
+  "version": "0.50",
   "background": {
     "scripts": ["background.js"]
   },
@@ -11,7 +11,7 @@
     "storage"
   ],
   "browser_action": {
-    //"default_icon": "icon.png",
+    "default_icon": "icons/greenD.png",
     "default_title": "dubitable",
     "default_popup": "popup.html"
   }
